--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       alert('Daily reward claimed!');
       // Add logic for claiming daily rewards
       const currentBalance = parseFloat(localStorage.getItem('balance')) || 0;
-      localStorage.setItem('balance', currentBalance + 15); // Daily reward amount
+      localStorage.setItem('balance', currentBalance + 5000000000); // Daily reward amount
       updateBalanceDisplay();
     }
 
