--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <button class="nav-button text-lg" onclick="showSection('rewardsSection')">Rewards</button>
     <button class="nav-button text-lg" onclick="showSection('referralSection')">Referral</button>
     <button class="nav-button text-lg" onclick="showSection('notificationsSection')">Alert</button>
-    <button class="nav-button text-lg" onclick="showSection('comingSoonSection')">WAL</button>
+    <button class="nav-button text-lg" onclick="showSection('comingSoonSection')">💰💰</button>
   </div>
 
   <script>
