--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
     <div id="miningAmount" class="text-lg mb-4 holographic-text"></div>
   </div>
 
+<p>Join our community &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://t.me/CosmicCoin11/89">Telegram</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://discord.com/invite/vBa8f2Pa">Discord</a></p>
+
+
+  
   <div id="tasksSection" class="hidden">
     <h2 class="text-2xl mb-4">Complete Tasks to Boost Mining Rate</h2>
     <ul class="list-disc list-inside">
