--- a/index.html
+++ b/index.html
@@ -107,10 +107,18 @@
     <div id="miningStatus" class="text-lg mb-4"></div>
     <div id="miningAmount" class="text-lg mb-4 holographic-text"></div>
   </div>
-
-<p>Join our community &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://t.me/CosmicCoin11/89">Telegram</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://discord.com/invite/vBa8f2Pa">Discord</a></p>
-
-
+<p/>
+  <p class="text-xl mb-4">
+    Join our community
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://t.me/CosmicCoin11/89" target="_blank">
+      <button class="bg-blue-500 hover:bg-blue-700 text-white font-small py-2 px-4 rounded">Telegram</button>
+    </a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://discord.com/invite/vBa8f2Pa" target="_blank">
+      <button class="bg-blue-500 hover:bg-blue-700 text-white font-small py-2 px-4 rounded">Discord</button>
+    </a>
+  </p>
   
   <div id="tasksSection" class="hidden">
     <h2 class="text-2xl mb-4">Complete Tasks to Boost Mining Rate</h2>
