--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
   <p/>
   <p class="text-xl mb-4">
-       Join our community
+       <p></p>Join our community<p/>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="https://t.me/CosmicCoin11/89" target="_blank">
       <button class="bg-blue-500 hover:bg-blue-700 text-white font-small py-2 px-4 rounded">Telegram</button>
