--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
     </div>
   </div>
 
-  <h1 class="text-3xl font-bold mb-6">CosmicCoin Galaxy Airdrop</h1>
-
-  <p/>
-    <p class="text-xl mb-4">
+  <h1 <p class="text-xl mb-4">
         OUR COMMUNITY 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="https://t.me/CosmicCoin11/89" target="_blank">
@@ -112,9 +109,9 @@
     <a href="https://discord.com/invite/vBa8f2Pa" target="_blank">
       <button class="bg-blue-500 hover:bg-blue-700 text-white font-small py-2 px-4 rounded">Discord</button>
     </a>
-    </p>
+  </p></h1>
 
-    
+  
   <div id="mainSection">
     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mb-4" onclick="startMining(24)">Start 24-Hour Mining</button>
     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mb-4" onclick="startMining(12)">Start 12-Hour Mining</button>
