--- a/index.html
+++ b/index.html
@@ -99,17 +99,7 @@
     </div>
   </div>
 
-  <h1 <p class="text-xl mb-4">
-        OUR COMMUNITY 
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://t.me/CosmicCoin11/89" target="_blank">
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-small py-2 px-4 rounded">Telegram</button>
-    </a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://discord.com/invite/vBa8f2Pa" target="_blank">
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-small py-2 px-4 rounded">Discord</button>
-    </a>
-  </p></h1>
+  <h1 class="text-3xl font-bold mb-6">CosmicCoin Galaxy Airdrop</h1>
 
   
   <div id="mainSection">
