--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
 
     function joinSquad(squad) {
       let rewards = {
-        'CEO_CTO_CLAUNS': 25B,
-        'CAO_HUBS': 21B,
-        'CPO_VILLAGES': 19B,
-        'CMO_VILLAS': 18B,
-        'CAO_CREWS': 10B,
-        'CPO_GUYS': 8.5B,
-        'CMO_RESORTS': 7.5B
+        'CEO_CTO_CLAUNS': 25000000000,
+        'CAO_HUBS': 21000000000,
+        'CPO_VILLAGES': 19000000000,
+        'CMO_VILLAS': 18000000000,
+        'CAO_CREWS': 10000000000,
+        'CPO_GUYS': 8.5000000000,
+        'CMO_RESORTS': 7.5000000000
       };
       let reward = rewards[squad] || 0;
       userCoins += reward;
